Fix bug 678343 - Adapt to the new chrome worker code / Cannot parse ICS files / workerfactory undefined. r=mmecca

--HG--
extra : rebase_source : c08e26d62118101e286008661aa987640aa9713c